--- a/4.Function_Assignment.ipynb
+++ b/4.Function_Assignment.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "id": "938de0db-df70-445b-bfd9-1d474c240450",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "id": "ed3d008f-9d4b-4b3f-a147-0d0aa73bd385",
    "metadata": {},
    "outputs": [
@@ -164,24 +164,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 64,
    "id": "cd406f5b-c8ac-4b02-9970-98d0e0fe9b9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def percentage():\n",
+    "    mark1=int(input(\"Enter mark for subject1\"))\n",
+    "    mark2=int(input(\"Enter mark for subject2\"))\n",
+    "    mark3=int(input(\"Enter mark for subject3\"))\n",
+    "    mark4=int(input(\"Enter mark for subject4\"))\n",
+    "    mark5=int(input(\"Enter mark for subject5\"))\n",
     "    \n",
-    "    marks=[98,87,95,95,93]\n",
-    "    l=len(marks)\n",
-    "    total=0\n",
-    "    print(\"subject :\",marks[0])\n",
-    "    print(\"Subject2 :\", marks[1])\n",
-    "    print(\"Subject3 :\", marks[2])\n",
-    "    print(\"Subject4: \", marks[3])\n",
-    "    print(\"Subject5: \", marks[4])\n",
-    "    for i in range(0,l):\n",
-    "        total=total+marks[i]\n",
-    "        percent=total/l  \n",
+    "    print(\"subject1 :\",mark1)\n",
+    "    print(\"Subject2 :\", mark2)\n",
+    "    print(\"Subject3 :\", mark3)\n",
+    "    print(\"Subject4: \", mark4)\n",
+    "    print(\"Subject5: \", mark5)\n",
+    "    total=mark1+mark2+mark3+mark4+mark5\n",
+    "    percent=total/5 \n",
     "        \n",
     "    print(\"total: \",total)\n",
     "    print(\"Percentage: \",percent )\n",
@@ -190,21 +191,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "id": "97c54ce4-0e50-4fc8-8dcb-b0e139d2003e",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter mark for subject1 90\n",
+      "Enter mark for subject2 90\n",
+      "Enter mark for subject3 90\n",
+      "Enter mark for subject4 90\n",
+      "Enter mark for subject5 90\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "subject : 98\n",
-      "Subject2 : 87\n",
-      "Subject3 : 95\n",
-      "Subject4:  95\n",
-      "Subject5:  93\n",
-      "total:  468\n",
-      "Percentage:  93.6\n"
+      "subject1 : 90\n",
+      "Subject2 : 90\n",
+      "Subject3 : 90\n",
+      "Subject4:  90\n",
+      "Subject5:  90\n",
+      "total:  450\n",
+      "Percentage:  90.0\n"
      ]
     }
    ],
@@ -291,7 +303,9 @@
    "cell_type": "code",
    "execution_count": 48,
    "id": "1bbc6b34-cf33-43b4-8835-22ca7d6d620f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -319,6 +333,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "218af8bb-d296-46c2-93b0-1beb00ed4370",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "225d2d58-0818-4cad-8150-dd3b823f1f31",
    "metadata": {},
    "outputs": [],
    "source": []
