--- a/Class_Assignment2.ipynb
+++ b/Class_Assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "113ece78-b2c0-4ba9-83b3-fc1ba220d400",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "05cb33ad-13cc-473f-89e4-1bccbef6cf6f",
    "metadata": {},
    "outputs": [
@@ -20,14 +20,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter a number 34\n"
+      "enter a number 24\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34  is Even number\n"
+      "24  is Even number\n"
      ]
     }
    ],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a0bf53db-3518-4ea5-80a7-30cffdc9754b",
    "metadata": {},
    "outputs": [
@@ -45,17 +45,17 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the Age 23\n",
-      "Enter your gender Female\n"
+      "Enter the Age 24\n",
+      "Enter your gender Male\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "your Gender:  Female\n",
-      "your age:  23\n",
-      "Eligible\n"
+      "your gender:  Male\n",
+      "your age:  24\n",
+      " Eligible\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "1b5165c2-a2fc-4289-a24e-d94c8b343790",
    "metadata": {},
    "outputs": [
@@ -73,75 +73,30 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter Height 2\n",
-      "enter Breath 3\n"
+      "enter Height1 5\n",
+      "enter Height2 6\n",
+      "enter Breath 4\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Height: 2 \n",
-      "Breath: 3\n"
+      "Height: 5 \n",
+      "Height: 6  \n",
+      "Breath: 4\n",
+      "area= 10.0\n",
+      "perimeter= 15\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3.0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "multifunction.area_triangle()"
+    "multifunction.area_perimeter_triangle()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "14270b75-9c93-41cc-bb19-4679af359707",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter Height1 2\n",
-      "enter Height2 3\n",
-      "enter Breath2 4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Height: 2 \n",
-      "Height: 3  \n",
-      "Breath: 4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "multifunction.perimeter_triangle()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "821aa026-1939-4e3a-8b82-4cf7d4a7bd77",
    "metadata": {},
    "outputs": [
@@ -165,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fc999e35-6d85-4e3d-8807-9024773704e4",
    "metadata": {},
    "outputs": [
@@ -173,24 +128,24 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter mark for subject1 99\n",
-      "Enter mark for subject2 98\n",
-      "Enter mark for subject3 97\n",
-      "Enter mark for subject4 96\n",
-      "Enter mark for subject5 99\n"
+      "Enter mark for subject1 98\n",
+      "Enter mark for subject2 97\n",
+      "Enter mark for subject3 98\n",
+      "Enter mark for subject4 99\n",
+      "Enter mark for subject5 100\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "subject1 : 99\n",
-      "Subject2 : 98\n",
-      "Subject3 : 97\n",
-      "Subject4:  96\n",
-      "Subject5:  99\n",
-      "total:  489\n",
-      "Percentage:  97.8\n"
+      "subject1 : 98\n",
+      "Subject2 : 97\n",
+      "Subject3 : 98\n",
+      "Subject4:  99\n",
+      "Subject5:  100\n",
+      "total:  492\n",
+      "Percentage:  98.4\n"
      ]
     }
    ],
